@@ -338,9 +338,9 @@ namespace
   {
     AttributeEmitter (Context& c, T& scope)
       : EmitterBase (c),
+        scope_ (scope),
         write_type_name_emitter_ (c.os ()),
-        read_type_name_emitter_ (c.os ()),
-        scope_ (scope)
+        read_type_name_emitter_ (c.os ())
     {
       write_belongs_.node_traverser (write_type_name_emitter_);
       read_belongs_.node_traverser (read_type_name_emitter_);
@@ -411,8 +411,8 @@ namespace
   {
     ReadOnlyAttributeEmitter (Context& c, T& scope)
       : EmitterBase (c),
-        read_type_name_emitter_ (c.os ()),
-        scope_ (scope)
+        scope_ (scope),
+        read_type_name_emitter_ (c.os ())
     {
       read_belongs_.node_traverser (read_type_name_emitter_);
     }
@@ -459,6 +459,7 @@ namespace
     {
     }
     
+  private:
     struct FacetOperationEmitter 
       : OperationEmitter<SemanticGraph::UnconstrainedInterface>
     {
@@ -521,6 +522,7 @@ namespace
       }
     };
     
+  public:
     virtual void
     traverse (UnconstrainedInterface& i)
     {
