@@ -1,3 +1,11 @@
+Sat Jun  5 17:24:21 2004  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * CIDLC/ServantSourceGenerator.cpp:
+        
+          Change the order of member initialization in the constructors of
+          AttributeEmitter and ReadonlyAttributeEmitter to match a recent
+          change in the order of their class members.
+
 Sat Jun  5 16:45:14 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>
 
         * DnC/RepositoryManager/RepositoryManager_Impl.cpp:
